<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background">

    <LinearLayout
        android:id="@+id/lin1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp">
        <ImageView
            android:layout_width="18dp"
            android:layout_height="12dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/menu"></ImageView>
        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/signup_header_text"
            android:textColor="@color/white"
            android:layout_marginRight="38dp"
            android:fontFamily="@font/robotomedium"
            ></TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin1"
        android:layout_marginTop="70dp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:textSize="32sp"
            android:layout_height="wrap_content"
            android:text="@string/signup_title"
            android:textColor="@color/white"
            android:fontFamily="@font/robotolight"
            ></TextView>
        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:text="@string/signup_subtitle"
            android:textColor="@color/white"
            android:fontFamily="@font/robotolight"
            ></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="227dp"
        android:layout_below="@+id/lin2"
        android:layout_marginTop="66dp"
        android:orientation="vertical"
        android:layout_marginHorizontal="40dp"
        >
        <EditText
            android:layout_weight="1"
            android:hint="@string/signup_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:background="@color/white" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/pale_gray_two"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:paddingLeft="20dp"
            android:hint="@string/signup_email" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/pale_gray_two"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:paddingLeft="20dp"
            android:hint="@string/signup_password" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/pale_gray_two"/>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@color/white"
                android:paddingLeft="20dp"
                android:hint="@string/signup_country" />
            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/pale_gray_two">
            0</View>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@color/white"
                android:paddingLeft="20dp"
                android:hint="@string/signup_city" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>