<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/lampada"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="86dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/idea_1"/>

    <TextView
        android:id="@+id/title"
        android:layout_marginHorizontal="40dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/robotomedium"
        android:layout_below="@+id/lampada"
        android:layout_marginTop="59dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="26sp"/>

    <TextView
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotolight"
        android:text="@string/main_subtitle"
        android:layout_below="@id/title"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="40dp"
        />


    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="90dp"
        android:layout_marginHorizontal="20dp"
        android:orientation="horizontal">

        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/main_signup"
            android:fontFamily="@font/robotomedium"
            android:textColor="@color/coral"
            android:layout_marginRight="10dp"
            android:background="@color/white"/>

        <Button
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/main_login"
            android:fontFamily="@font/robotomedium"
            android:textColor="@color/coral"
            android:background="@color/white"/>


    </LinearLayout>


</RelativeLayout>